@@ -92,6 +92,8 @@ roles = {
     'pep': 'pep-reference',
     'rfc-reference': 'rfc-reference',
     'rfc': 'rfc-reference',
+    'bcp-reference': 'bcp-reference',
+    'bcp': 'bcp-reference',
     'emphasis': 'emphasis',
     'strong': 'strong',
     'literal': 'literal',
