@@ -81,7 +81,8 @@ roles = {
       'riferimento-titolo': 'title-reference',
       'riferimento-pep': 'pep-reference',
       'riferimento-rfc': 'rfc-reference',
-      'enfasi': 'emphasis',
+      'bcp-reference (translation needed)': 'bcp-reference',
+        'enfasi': 'emphasis',
       'forte': 'strong',
       'letterale': 'literal',
       'math (translation required)': 'math',
