@@ -79,6 +79,7 @@ roles = {
       'title-reference (translation required)': 'title-reference',
       'pep-reference (translation required)': 'pep-reference',
       'rfc-reference (translation required)': 'rfc-reference',
+      'bcp-reference (translation needed)': 'bcp-reference',
       'emphasis (translation required)': 'emphasis',
       'strong (translation required)': 'strong',
       'literal (translation required)': 'literal',
