@@ -62,6 +62,7 @@ Changes Since 0.18.1
 * docutils/parsers/rst/roles.py
 
   - Don't use mutable default values for function arguments. Fixes bug #430.
+  - Added new BCP role for *Best Current Practice* documents. Patch by Adam Turner.
 
 * docutils/transforms/universal.py
 
